--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
             <div class="caixa-menor">
                 <img class="img-previsao" src="https://openweathermap.org/img/wn/04n.png">
-                <p class="texto-previsao">Nublado</p>
+                <p class="texto-previsao">Nublado
+                    
+                </p>
             </div>
 
             <p class="umidade">Umidade: 76%</p>
